<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/playerCloseHand"
        android:layout_width="96dp"
        android:layout_height="116dp"
        android:layout_marginStart="152dp"
        android:layout_marginLeft="152dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_fist_svgrepo_com"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="284dp"
        android:text=""
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/playerInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text=""
        android:textColor="#fff"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/guess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:onClick="makeGuess"
        android:text="@string/chute"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/putSticks"
        app:layout_constraintHorizontal_bias="0.573"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <EditText
        android:id="@+id/putSticks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:digits="@string/firstStep"
        android:fontFamily="sans-serif"
        android:hint="@string/quantity"
        android:inputType="number"
        android:maxLength="1"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <Button
        android:id="@+id/addInHand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:onClick="addSticksInHand"
        android:text="@string/add"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toEndOf="@+id/putSticks"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="70dp"
        android:layout_height="79dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:mipmap/sym_def_app_icon" />

    <ImageView
        android:id="@+id/playerOpenHand"
        android:layout_width="102dp"
        android:layout_height="104dp"
        android:layout_marginStart="152dp"
        android:layout_marginLeft="152dp"
        android:layout_marginBottom="48dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_waving_hand_svgrepo_com"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/stick01"
        android:layout_width="41dp"
        android:layout_height="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/playerOpenHand"
        app:layout_constraintEnd_toEndOf="@+id/playerOpenHand"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="@+id/playerOpenHand"
        app:layout_constraintTop_toTopOf="@+id/playerOpenHand"
        app:layout_constraintVertical_bias="0.572"
        app:srcCompat="@drawable/ic_sticks"
        tools:ignore="VectorDrawableCompat"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/stick02"
        android:layout_width="35dp"
        android:layout_height="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/playerOpenHand"
        app:layout_constraintEnd_toEndOf="@+id/playerOpenHand"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toStartOf="@+id/playerOpenHand"
        app:layout_constraintTop_toTopOf="@+id/playerOpenHand"
        app:layout_constraintVertical_bias="0.656"
        app:srcCompat="@drawable/ic_sticks"
        tools:ignore="VectorDrawableCompat"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/stick03"
        android:layout_width="32dp"
        android:layout_height="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/playerOpenHand"
        app:layout_constraintEnd_toEndOf="@+id/playerOpenHand"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="@+id/playerOpenHand"
        app:layout_constraintTop_toTopOf="@+id/playerOpenHand"
        app:layout_constraintVertical_bias="0.739"
        app:srcCompat="@drawable/ic_sticks"
        tools:ignore="VectorDrawableCompat"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/botOpenHand"
        android:layout_width="132dp"
        android:layout_height="132dp"
        android:layout_marginStart="136dp"
        android:layout_marginLeft="136dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_botopenhand"
        tools:ignore="VectorDrawableCompat"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/botCloseHand"
        android:layout_width="122dp"
        android:layout_height="126dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="148dp"
        android:layout_marginRight="148dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_robotclosehand"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/botStick02"
        android:layout_width="60dp"
        android:layout_height="16dp"
        app:layout_constraintEnd_toEndOf="@+id/botOpenHand"
        app:layout_constraintHorizontal_bias="0.733"
        app:layout_constraintStart_toStartOf="@+id/botOpenHand"
        app:layout_constraintTop_toBottomOf="@+id/botStick01"
        app:srcCompat="@drawable/ic_sticks"
        tools:ignore="VectorDrawableCompat"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/botStick01"
        android:layout_width="58dp"
        android:layout_height="15dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/botOpenHand"
        app:layout_constraintHorizontal_bias="0.716"
        app:layout_constraintStart_toStartOf="@+id/botOpenHand"
        app:layout_constraintTop_toTopOf="@+id/botOpenHand"
        app:srcCompat="@drawable/ic_sticks"
        tools:ignore="VectorDrawableCompat"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/botStick03"
        android:layout_width="59dp"
        android:layout_height="13dp"
        app:layout_constraintEnd_toEndOf="@+id/botOpenHand"
        app:layout_constraintHorizontal_bias="0.725"
        app:layout_constraintStart_toStartOf="@+id/botOpenHand"
        app:layout_constraintTop_toBottomOf="@+id/botStick02"
        app:srcCompat="@drawable/ic_sticks"
        tools:ignore="VectorDrawableCompat"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/startGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="352dp"
        android:background="#000"
        android:text="@string/start"
        android:textColor="#FFF"
        android:onClick="roundControl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/botInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text=""
        android:textColor="#fff"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/botSticksInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:text=""
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/playerSticksInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginBottom="36dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>